<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@android:color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_seat_type"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/textEnterOtherSeatType"
        style="@android:style/Widget.Material.EditText"
        android:background="@android:drawable/editbox_background_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/search"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="12dp"
        android:singleLine="true" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listOfTypeSeat"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:divider="@color/divider"
        android:dividerHeight="1dp">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/dialogSetTypeClose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/Close"
        android:textAlignment="textEnd"
        android:textAllCaps="true"
        android:textColor="@color/accent"
        android:textSize="17sp" />


</LinearLayout>