<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@android:color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleDialogSeatNumber"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/textEnterOtherNumberSeat"
        style="@android:style/Widget.Material.EditText"
        android:background="@android:drawable/editbox_background_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/seatNumber"
        android:importantForAutofill="no"
        android:inputType="number"
        android:padding="12dp"
        android:singleLine="true"
        android:textAllCaps="true" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listOfNumberSeat"
        android:layout_width="match_parent"
        android:layout_height="200dp">
    </androidx.recyclerview.widget.RecyclerView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp">

        <TextView
            android:id="@+id/dialogNumberSeatClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/Close"
            android:textAlignment="textEnd"
            android:textAllCaps="true"
            android:textColor="@color/accent"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/dialogNumberSeatOtherNumber"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/dialogNumberSeatOtherNumber"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/confirm"
            android:textAlignment="textEnd"
            android:textAllCaps="true"
            android:textColor="@color/accent"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>